# RobRehabSystem

./: .gitignore  CL.read.1.tlog  CL.write.1.tlog  CMakeLists.txt  EMGJointControlPlugin.prj  ForceFuzzyControlPlugin.prj  ForcePIControlPlugin.prj  JSONPlugin.prj  MKVControlPlugin.prj  NICANEPOS.prj  NICANEPOSDAQPlugin.prj  NICANEPOSPlugin.prj  NIDAQmx.lib  NIDAQmxPlugin.prj  NetworkVariableRT.lib  README.md  REHAB_ROBOT.sln  REHAB_ROBOT.sln.old  REHAB_ROBOT.suo.old  Rehab_Gui.sln  Rehab_Server.sln  RobRehabControl.cws  RobRehabControlGui.prj  RobRehabControlRT.lib  RobRehabControlRT.prj  RobRehabEMG.lib  RobRehabEMG.prj  RobRehabGui  RobRehabServer  RobRehabServerRT.lib  RobRehabServerRT.prj  RobRehabSystem.kdev4  SimpleJointPlugin.prj  build_control.sh  build_plugins.sh  build_run_gui.sh  build_run_server.sh  build_server.sh  cgp  cl.command.1.tlog  (+14 more)
.kdev4/: RobRehabGui.kdev4  RobRehabServer.kdev4  RobRehabSystem.kdev4
Rehab_Gui/: Rehab_Gui.vcxproj  Rehab_Gui.vcxproj.filters
Rehab_Robot/: Axis.h  CANFrame.h  CL.read.1.tlog  DERIVA.h  FRF.asv  REHAB_ROBOT  REHAB_ROBOT.lastbuildstate  REHAB_ROBOT.vcproj  REHAB_ROBOT.vcxproj  REHAB_ROBOT.vcxproj.filters  Untitled.asv  Untitled.m  _ctypes_test.pyd  _elementtree.pyd  _testbuffer.pyd  async_connection.h  client.cpp  client.h  client_unix.h  client_windows.h  connect_windows.h  connection.h  constantes_quadril.h  control.h  gui_init.py  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.cpp  mt.command.1.tlog  mt.read.1.tlog  nixnet.h  script_network.h  server_main.c  threads_unix.h
Rehab_Robot/libs/: _bz2.lib  _ctypes_test.lib  _decimal.lib  _elementtree.lib  _hashlib.lib  _multiprocessing.lib  _sqlite3.lib  _tkinter.lib  pyexpat.lib  python33.lib  select.lib  unicodedata.lib
Rehab_Server/: Rehab_Server.vcxproj  Rehab_Server.vcxproj.filters
RobRehabControl/: RobRehabControl.sln
RobRehabControl/RobRehabControl/: RobRehabControl.vcxproj  RobRehabControl.vcxproj.filters
config/: shared_axes.json  shared_axis_controls.json  shared_emg_joints.json  shared_keys.json  shared_robots.json  shared_robots_template.json
config/actuators/: knee.json  simple_joint_actuator.json  template_sea.json  virtual_actuator.json
config/axis_controls/: template.json
config/emg_joint/: knee.json
config/emg_joints/: knee.json
config/emg_sensor/: bisceps_femoris.json  rectus_femoris.json
config/emg_sensors/: bisceps_femoris.json  rectus_femoris.json  semitendinoso.json  vastus_laterais.json  vastus_medialis.json
config/joints/: knee.json
config/motors/: anklebot_left_motor.json  anklebot_right_motor.json  knee.json  simple_joint_motor.json
config/muscles/: bisceps_femoris.json  rectus_femoris.json  semitendinoso.json  vastus_laterais.json  vastus_medialis.json
config/robots/: exokanguera.json  open_sim_model.json  simple_joint.json  simple_joint_opensim.json  test_model.osim
config/sensors/: ankle_position.json  anklebot_left_force.json  anklebot_left_position.json  anklebot_right_force.json  anklebot_right_position.json  knee.json  knee_force.json  knee_force_rad.json  knee_motor.json  knee_position.json  knee_velocity.json  simple_joint_sensor_motor.json  simple_joint_sensor_position.json  simple_joint_sensor_torque.json  simple_joint_sensor_velocity.json  template_can.json  virtual_sensor_force.json
cvibuild.ForceFuzzyControlPlugin/Debug/: ForceFuzzyControl.lib  Jamfile  Jamfile_instr
cvibuild.ForcePIControlPlugin/Debug/: ForcePIControl.lib  Jamfile  Jamfile_instr
cvibuild.ForcePIControlPlugin/Release/: Jamfile  Jamfile_instr
cvibuild.JSONPlugin/Debug/: JSON.lib  Jamfile  Jamfile_instr
cvibuild.NICANEPOS/Debug/: Jamfile  Jamfile_instr  NICANEPOS.lib
cvibuild.NICANEPOSDAQPlugin/Debug/: Jamfile  Jamfile_instr  NICANEPOS.lib
cvibuild.NICANEPOSDAQPlugin/Release/: Jamfile  Jamfile_instr
cvibuild.NICANEPOSDAQPlugin/Release64/: Jamfile  Jamfile_instr  NICANEPOSDAQPlugin.dll.defs
cvibuild.NIDAQmxPlugin/Debug/: Jamfile  Jamfile_instr  NIDAQmx.dll.defs  NIDAQmx.lib
cvibuild.NIDAQmxPlugin/Release/: Jamfile  Jamfile_instr  NIDAQmx.lib
cvibuild.RobRehabControlGui/Debug/: Jamfile  Jamfile_instr
cvibuild.RobRehabControlRT/Debug/: Jamfile  Jamfile_instr
cvibuild.RobRehabControlRT/Release/: Jamfile  Jamfile_instr  NetworkVariableRT.lib  (+1 more)
data/: NetworkVariable.h  NetworkVariable.uir  emg_processing.h  message_arrival_times.txt  message_dispatch_times.txt  message_response_times.txt  receive_calls_client.txt  receive_calls_server.txt  send_calls_client.txt  send_calls_server.txt  theta_j.txt  theta_q.txt
libs/: libopenblas.def  libopenblas.exp  libopenblas.lib  libpowerdaq32.so.1.0  nixnet.lib
msvc/: EMGJointControlPlugin.lib  JSON.lib  NetworkVariableRT.lib  RobRehabControlRT.lib  RobRehabEMG.lib  RobRehabServerRT.lib
scripts/: ReRobClientGUI.py  ReRobIPNetwork.py  client_init.py  client_update.py  data_plot_scilab.sce  gui_update.py  server_init.py  server_update.py  timesplot.asv  timesplot.m
src/: .axis_control_interface.h.kate-swp  .axis_interface.h.kate-swp  .directory  ANALISE.asv  ANALISE.m  Axis.h  CL.read.1.tlog  CL.write.1.tlog  Common.h  EPOSNetwork.h  FRF.m  ForceControl.asv  ForceControl.m  NetworkVariable.h  NetworkVariable.uir  NetworkVariableHost.c  NetworkVariableRT.c  Rehab_Gui.lastbuildstate  Rehab_Gui.vcxproj  Rehab_Gui.vcxproj.filters  Rehab_Server.vcxproj  Rehab_Server.vcxproj.filters  RobRehabClientGUI.c  RobRehabClientGUI.h  RobRehabClientGUI.uir  RobRehabControlGUI.h  RobRehabControlGUI.uir  RobRehabGui  RobRehabGui.kateproject  RobRehabServer  _msi.pyd  _sqlite3.pyd  actuator_control.h  actuator_interface.h  actuators.c  actuators.h  aes_control.h  async_connection.h  async_debug.h  async_ip_connection.h  (+121 more)
tools/: 1sec.tcl  ABOUT  Makefile  U.tcl  abox  acenter  adderr  all2a  ankle  anref  anscales  ao8sine  avmz  blockwcenter  c  calib  can.tcl  cb  cbackup  cbackup.050126  cbackup.ok  cbackup.old  cdsum  ceacenter  center  cewcenter  check-plc  checkdat  checkonedat  cp2zip  curl.tcl  curs  damp.tcl  datbody  datbody.old  dathead  datinfo  display  dolog  doutsq  (+75 more)
(+237 files in other folders)
